# DirectXTK_CMakeTemplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  DeviceResources.cpp  Game.cpp  Game.h  Main.cpp  Resource.h  Resource.rc
src/Client/PrecompiledHeaders/: ClientPCH.h
